Avoid flushing CreateStreamCommand for calls where the client is known to send a payload immediately afterward. Added simple JMH benchmark for Netty so improvements can be measured